<resources>
    <string name="app_name">IDO设置</string>
    <string name="tab_text_1">基础设置</string>
    <string name="tab_text_2">开关机设置</string>
    <string name="string_close">关机：%s</string>
    <string name="string_open">开机：%s</string>
    <string name="string_select1">第一段</string>
    <string name="string_select2">第二段</string>
    <string name="string_select3">第三段</string>
    <string name="string_week">周一</string>
    <string name="string_tips">开关机时间间隔不能小于：%d 秒</string>
    <string name="string_tips2">开关机时间设置有误，请检查后重试</string>

</resources>
