<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">

    <TextView
        android:id="@+id/textWeekday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/string_week" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/checkSelect1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_select1"/>
        <TextView
            android:id="@+id/textClose1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_close"/>
        <TextView
            android:id="@+id/textOpen1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_open"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/checkSelect2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_select2"/>
        <TextView
            android:id="@+id/textClose2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_close"/>
        <TextView
            android:id="@+id/textOpen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_open"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/checkSelect3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_select3"/>
        <TextView
            android:id="@+id/textClose3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_close"/>
        <TextView
            android:id="@+id/textOpen3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_open"/>
    </LinearLayout>

</LinearLayout>